--- a/index.html
+++ b/index.html
@@ -161,7 +161,9 @@
                     <h3 class="with-sideline">CV</h3><a href="CV_BGong.pdf" class="btn btn-medium btn-block btn-round btn-thick-border"><i class="oi-download-from-cloud"></i><span class="text-capitilize">Download CV</span></a>
                     <p><br></p>
                     <h3 class="with-sideline">Recent services</h3>
-                    <p>Area chair of NeurIPS'19, ICCV'19, ICML'19, AISTATS'19, and WACV'18-19</p>
+                    <p>Area chair of NeurIPS'19, ICCV'19, ICML'19, AISTATS'19, and WACV'18-20</p>
+                    <p></p>
+                    <p>Senior area chair (meta-reviewer) of AAAI'20</p>
                     <p></p>
                     <p>Reviewing for NSF (proposals), NeurIPS, ICML, CVPR, ICCV, ECCV, ICLR, AISTATS, T-PAMI, IJCV, JMLR, etc.</p>
                     <p></p>
