--- a/index.html
+++ b/index.html
@@ -145,6 +145,10 @@
 
                     
                     <h4 class="with-sideline"><u> <a href="research.html"><font color="blue">Slides from recent talks</font> </a></u> </h4>
+                    <br><br>
+                    <p> <font color="black">Curious about <i>sequential determinantal point processes?</i> Come to <u><a href="https://rpand002.github.io/cvpr19_sumt.html"><font color="blue"> our CVPR tutorial</font> </a></u> on June 16, 2019.</font>  </p>
+                    <p> <font color="black">Wanted to learn about <i>recent works on adversarial attack & defense?</i> Check out our presentations in <u><a href="https://icml.cc/Conferences/2019/ScheduleMultitrack?event=4749"><font color="blue"> ICML</font> </a></u> on June 12, <u><a href="https://amlcvpr2019.github.io/"><font color="blue"> CVPR workshop on AdvMLCV </font> </a></u> on June 16, and <u><a href="http://www.gigavision.cn/index.php?c=main&a=CVPR2019"><font color="blue"> CVPR workshop on GigaVision</font> </a></u> on June 17, 2019.</font>  </p>
+                    
                       <!--ul style="list-style-type:disc">
                         <li><b>Learning and Adapting from the Web for Visual Recognitiona</b> <a href="assets/Web-DA.pdf">  <u>[PDF]</u> </a><br>
                       <i>In CVPR 2018 Workshop on <u><a href="https://www.vision.ee.ethz.ch/webvision/workshop.html">Web Vision</a></u> and ECCV 2018 Workshop on <u><a href="https://www.cefrl.org/">CEFRL</a></u></i></li>
@@ -223,7 +227,7 @@
                             <a class="btn btn-small btn-round btn-icon-right btn-anim-i" href="publications.html"><i class="icon oi-forward"></i><span>read more</span></a>
                           </div>
                           <h5 class="title"><a href="https://github.com/Cold-Winter/Nattack"><font color="blue">Code released</font></a> for our <a href="https://arxiv.org/pdf/1905.00441.pdf"><font color="blue">ICML'19 paper</font></a> on black-box adversarial attacks (05/2019). Congrats, <a href="https://cold-winter.github.io/"><font color="blue">Yandong</font></a> and Lijun!</h5>
-                          <h5 class="title"><a href="https://liuziwei7.github.io/projects/LongTail.html"><font color="blue">Data released</font></a> (code coming soon) for our <a href="https://arxiv.org/abs/1904.05160"><font color="blue">CVPR'19 paper</font></a> on open and long-tailed recognition (04/2019)</h5>
+                          <h5 class="title"><a href="https://liuziwei7.github.io/projects/LongTail.html"><font color="blue">Data and code released</font></a> for our <a href="https://arxiv.org/abs/1904.05160"><font color="blue">CVPR'19 paper</font></a> on open and long-tailed recognition (04/2019)</h5>
                           <h5 class="title"><a href="https://github.com/Sha-Lab/SynPo"><font color="blue">Code released</font></a> for our <a href="papers/policy-adaptation.pdf"><font color="blue">NeurIPS'18 paper</font></a> on policy transfer and adaptation (04/2019)</h5>
                           <h5 class="title">Area chair of NeurIPS'19, ICML'19, ICCV'19, and AISTATS'19 (02/2019)</h5>
                           <h5 class="title">NSF panelist (2019)</h5>
