icml/cvpr talks

--- a/research.html
+++ b/research.html
@@ -135,6 +135,17 @@ http://themeforest.net/user/owwwlab/
                             </div>
                           </div>
                         </div>
+                        <div class="pub-item with-icon">
+                          <div class="elem-wrapper"><i class="oli oli-bookmark"></i></div>
+                          <div class="content-wrapper">
+                            <h3 class="title">Sequential Determinantal Point Processes: Models, Algorithms, and Applications in Diverse and Sequential Subset Selection &#10230; <a href="assets/seqDPP-tutorial.pdf"> <u>[Slides]</u> </a></h3>
+                            <div class="description"> 
+                              <p>
+                                IEEE CVPR 2019 Tutorial on <u><a href="https://rpand002.github.io/cvpr19_sumt.html">Recent Advances in Visual Data Summarization</a></u> 
+                              </p>
+                            </div>
+                          </div>
+                        </div>
                       	<div class="pub-item with-icon">
                           <div class="elem-wrapper"><i class="oli oli-bookmark"></i></div>
                           <div class="content-wrapper">
