--- a/publications.html
+++ b/publications.html
@@ -144,6 +144,46 @@ http://themeforest.net/user/owwwlab/
                   </div>
 
                   <div class="tl-item active pub-item with-thumb"><span class="item-section">2019</span>
+                    <div class="elem-wrapper"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;ICCV</div><br>
+                    <div class="content-wrapper">
+                      <h3 class="title">A Fast and Accurate One-Stage Approach to Visual Grounding</h3>
+                      <div class="description">
+                        <div class="citation"><span> International Conference on Computer Vision <b>(ICCV)</b>, 2019  <b><font color="blue">(Oral)</font></b><span class="block-elem">Z Yang, <b>B Gong</b>, L Wang, W Huang, D Yu, and J Luo</span></span></div>
+                        <font color="blue">&#10236; [ <a href="https://arxiv.org/abs/1908.06354">ArXiv</a> ] &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="">Code coming soon</a> ] &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="">Slides coming soon</a> ] </font>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="tl-item pub-item with-thumb">
+                    <div class="elem-wrapper"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;ICCV</div><br>
+                    <div class="content-wrapper">
+                      <h3 class="title">Domain Randomization and Pyramid Consistency: Simulation-to-Real Generalization without Accessing Target Domain Data</h3>
+                      <div class="description">
+                        <div class="citation"><span> International Conference on Computer Vision <b>(ICCV)</b>, 2019  <span class="block-elem">X Yue, Y Zhang, S Zhao, A Sangiovanni-Vincentelli, K Keutzer, and <b>B Gong</b></span></span></div>
+                        <font color="blue">&#10236; [ <a href="https://arxiv.org/abs/1909.00889">ArXiv</a> ] &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="https://github.com/xyyue/DRPC">Code</a> ]</font>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="tl-item pub-item with-thumb">
+                    <div class="elem-wrapper"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;ICCV</div><br>
+                    <div class="content-wrapper">
+                      <h3 class="title">Constructing Self-motivated Pyramid Curriculums for Cross-Domain Semantic Segmentation: A Non-Adversarial Approach</h3>
+                      <div class="description">
+                        <div class="citation"><span> International Conference on Computer Vision <b>(ICCV)</b>, 2019  <span class="block-elem">Q Lian, F Lv, L Duan, and <b>B Gong</b></span></span></div>
+                        <font color="blue">&#10236; [ <a href="https://arxiv.org/abs/1908.09547">ArXiv</a> ] &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="https://github.com/lianqing11/PyCDA">Code</a> ]</font>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="tl-item pub-item with-thumb">
+                    <div class="elem-wrapper"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;IJCV</div><br>
+                    <div class="content-wrapper">
+                      <h3 class="title">Classifier and Exemplar Synthesis for Zero-Shot Learning</h3>
+                      <div class="description">
+                        <div class="citation"><span> International Journal of Computer Vision <b>(IJCV)</b>, 2019  <span class="block-elem">S Changpinyo, WL Chao, <b>B Gong</b>, and F Sha</span></span></div>
+                        <font color="blue">&#10236; [ <a href="https://arxiv.org/pdf/1905.00441.pdf">ArXiv</a> ] &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="https://github.com/Cold-Winter/Nattack">Code</a> ] &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="https://docs.google.com/presentation/d/1A1xlKOMSmatW_vtxJbVyDJbPl7D0_9MQiAVDPOZ3AGs/edit?usp=sharing">Slides</a> ] </font>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="tl-item pub-item with-thumb">
                     <div class="elem-wrapper"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;ICML</div><br>
                     <div class="content-wrapper">
                       <h3 class="title">NATTACK: Learning the Distributions of Adversarial Examples for an Improved Black-Box Attack on Deep Neural Networks</h3>
