--- a/index.html
+++ b/index.html
@@ -145,27 +145,17 @@
 
                     
                     <h4 class="with-sideline"><u> <a href="research.html"><font color="blue">Slides from recent talks</font> </a></u> </h4>
-                    <br><br>
+                    <!--br><br>
                     <p> <font color="black">Curious about <i>sequential determinantal point processes?</i> Come to <u><a href="https://rpand002.github.io/cvpr19_sumt.html"><font color="blue"> our CVPR tutorial</font> </a></u> on June 16, 2019.</font>  </p>
-                    <p> <font color="black">Wanted to learn about <i>recent works on adversarial attack & defense?</i> Check out our presentations in <u><a href="https://icml.cc/Conferences/2019/ScheduleMultitrack?event=4749"><font color="blue"> ICML</font> </a></u> on June 12, <u><a href="https://amlcvpr2019.github.io/"><font color="blue"> CVPR workshop on AdvMLCV </font> </a></u> on June 16, and <u><a href="http://www.gigavision.cn/index.php?c=main&a=CVPR2019"><font color="blue"> CVPR workshop on GigaVision</font> </a></u> on June 17, 2019.</font>  </p>
+                    <p> <font color="black">Wanted to learn about <i>recent works on adversarial attack & defense?</i> Check out our presentations in <u><a href="https://icml.cc/Conferences/2019/ScheduleMultitrack?event=4749"><font color="blue"> ICML</font> </a></u> on June 12, <u><a href="https://amlcvpr2019.github.io/"><font color="blue"> CVPR workshop on AdvMLCV </font> </a></u> on June 16, and <u><a href="http://www.gigavision.cn/index.php?c=main&a=CVPR2019"><font color="blue"> CVPR workshop on GigaVision</font> </a></u> on June 17, 2019.</font>  </p-->
                     
-                      <!--ul style="list-style-type:disc">
-                        <li><b>Learning and Adapting from the Web for Visual Recognitiona</b> <a href="assets/Web-DA.pdf">  <u>[PDF]</u> </a><br>
-                      <i>In CVPR 2018 Workshop on <u><a href="https://www.vision.ee.ethz.ch/webvision/workshop.html">Web Vision</a></u> and ECCV 2018 Workshop on <u><a href="https://www.cefrl.org/">CEFRL</a></u></i></li>
-                        <li><b>Domain Adaptation and Transfer: All You Need to Use Simulation "for Real"</b><a href="assets/simulation-da.pdf">  <u>[PDF]</u> </a><br>
-                      <i>In ECCV 2018 Workshop on <u><a href="https://eccv18-vlease.github.io/">Visual Learning and Embodied Agents in Simulation</a></u></i></li>
-                        <li><b>Sequential Determinantal Point Processes (SeqDPPs) and Variations for Supervised Video Summarization</b> <a href="assets/dpp.pdf">  <u>[PDF]</u> </a><br>
-                          <i>In UC Berkeley, UC Irvine, Stanford University, Adobe Research, Facebook, etc. in 2017</i></li>
-                        <li><b>Domain Adaptation for Robust Visual Recognition</b><a href="assets/domain-adaptation.pdf">  <u>[PDF]</u></a><br>
-                          <i>In ICSI/UC Berkeley, UC Santa Cruz, Google Research, NVIDIA Research, NEC Labs, etc. in 2017</i></li>
-                      </ul-->
 
                   </div>
                   <div class="col-md-3">
                     <h3 class="with-sideline">CV</h3><a href="CV_BGong.pdf" class="btn btn-medium btn-block btn-round btn-thick-border"><i class="oi-download-from-cloud"></i><span class="text-capitilize">Download CV</span></a>
                     <p><br></p>
                     <h3 class="with-sideline">Recent services</h3>
-                    <p>Area chair of NeurIPS'19, ICCV'19, ICML'19, AISTATS'19, and WACV'18-20</p>
+                    <p>Area chair of CVPR'20, NeurIPS'19, ICCV'19, ICML'19, AISTATS'19, and WACV'18-20</p>
                     <p></p>
                     <p>Senior area chair (meta-reviewer) of AAAI'20</p>
                     <p></p>
@@ -222,10 +212,12 @@
                         <div class="tl-item"></div>
 
                         <div class="tl-item">
-                          <h5 class="title">Papers published on adversarial attack, vision+language, and reinforcement learning (2019)</h5>
+                          <h5 class="title">Papers published on adversarial attack, vision+language, domain adaptation, and reinforcement learning (2019)</h5>
                           <div class="description"> 
                             <a class="btn btn-small btn-round btn-icon-right btn-anim-i" href="publications.html"><i class="icon oi-forward"></i><span>read more</span></a>
                           </div>
+                          <h5 class="title"><a href="https://github.com/xyyue/DRPC"><font color="blue">Code released</font></a> for our <a href="https://arxiv.org/abs/1909.00889"><font color="blue">ICCV'19 paper</font></a> on domain generalization (08/2019). </h5>
+                          <h5 class="title"><a href="https://github.com/lianqing11/PyCDA"><font color="blue">Code released</font></a> for our <a href="https://arxiv.org/abs/1908.09547"><font color="blue">ICCV'19 paper</font></a> on domain adaptation (08/2019). </h5>
                           <h5 class="title"><a href="https://github.com/Cold-Winter/Nattack"><font color="blue">Code released</font></a> for our <a href="https://arxiv.org/pdf/1905.00441.pdf"><font color="blue">ICML'19 paper</font></a> on black-box adversarial attacks (05/2019). Congrats, <a href="https://cold-winter.github.io/"><font color="blue">Yandong</font></a> and Lijun!</h5>
                           <h5 class="title"><a href="https://liuziwei7.github.io/projects/LongTail.html"><font color="blue">Data and code released</font></a> for our <a href="https://arxiv.org/abs/1904.05160"><font color="blue">CVPR'19 paper</font></a> on open and long-tailed recognition (04/2019)</h5>
                           <h5 class="title"><a href="https://github.com/Sha-Lab/SynPo"><font color="blue">Code released</font></a> for our <a href="papers/policy-adaptation.pdf"><font color="blue">NeurIPS'18 paper</font></a> on policy transfer and adaptation (04/2019)</h5>
