--- a/publications.html
+++ b/publications.html
@@ -174,16 +174,6 @@ http://themeforest.net/user/owwwlab/
                     </div>
                   </div>
                   <div class="tl-item pub-item with-thumb">
-                    <div class="elem-wrapper"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;IJCV</div><br>
-                    <div class="content-wrapper">
-                      <h3 class="title">Classifier and Exemplar Synthesis for Zero-Shot Learning</h3>
-                      <div class="description">
-                        <div class="citation"><span> International Journal of Computer Vision <b>(IJCV)</b>, 2019  <span class="block-elem">S Changpinyo, WL Chao, <b>B Gong</b>, and F Sha</span></span></div>
-                        <font color="blue">&#10236; [ <a href="https://arxiv.org/pdf/1905.00441.pdf">ArXiv</a> ] &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="https://github.com/Cold-Winter/Nattack">Code</a> ] &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="https://docs.google.com/presentation/d/1A1xlKOMSmatW_vtxJbVyDJbPl7D0_9MQiAVDPOZ3AGs/edit?usp=sharing">Slides</a> ] </font>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="tl-item pub-item with-thumb">
                     <div class="elem-wrapper"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;ICML</div><br>
                     <div class="content-wrapper">
                       <h3 class="title">NATTACK: Learning the Distributions of Adversarial Examples for an Improved Black-Box Attack on Deep Neural Networks</h3>
@@ -220,6 +210,16 @@ http://themeforest.net/user/owwwlab/
                       <div class="description">
                         <div class="citation"><span> International Conference on Learning Representations <b>(ICLR)</b>, 2019 <span class="block-elem">M Fang, C Zhou, B Shi, <b>B Gong</b>, J Xu, and T Zhang</span></span></div>
                         <font color="blue">&#10236; [ <a href="https://openreview.net/pdf?id=Byf5-30qFX">PDF</a> ] &nbsp;&nbsp;&nbsp;&nbsp; [ <a href="https://openreview.net/forum?id=Byf5-30qFX">Openreview</a> ] </font>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="tl-item pub-item with-thumb">
+                    <div class="elem-wrapper"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;MM</div><br>
+                    <div class="content-wrapper">
+                      <h3 class="title">Facial Image-to-Video Translation by a Hidden Affine Transformation</h3>
+                      <div class="description">
+                        <div class="citation"><span> Proceedings of the 27th ACM International Conference on Multimedia <b>(MM)</b>, 2019  <span class="block-elem">G Shen, W Huang, C Gan, M Tan, J Huang, W Zhu, and <b>B Gong</b></span></span></div>
+                        <font color="blue">&#10236; [ <a href="papers/shenMM.pdf">Paper</a> ] &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="https://github.com/sunlightsgy/AffineGAN">Code</a> ] </font>
                       </div>
                     </div>
                   </div>
@@ -292,6 +292,16 @@ http://themeforest.net/user/owwwlab/
                       <div class="description">
                         <div class="citation"><span> IEEE Winter Conference on Applications of Computer Vision <b>(WACV)</b>, 2019 <span class="block-elem">Z He, <b>B Gong</b>, and D Fan</span></span></div>
                         <font color="blue">&#10236; [ <a href="papers/compression.pdf">PDF</a> ] &nbsp;&nbsp;&nbsp;&nbsp; [ <a href="papers/suppl-compression.pdf">Supplement</a> ]</font>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="tl-item pub-item with-thumb">
+                    <div class="elem-wrapper"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;IJCV</div><br>
+                    <div class="content-wrapper">
+                      <h3 class="title">Classifier and Exemplar Synthesis for Zero-Shot Learning</h3>
+                      <div class="description">
+                        <div class="citation"><span> International Journal of Computer Vision <b>(IJCV)</b>, 2019  <span class="block-elem">S Changpinyo, WL Chao, <b>B Gong</b>, and F Sha</span></span></div>
+                        <font color="blue">&#10236; [ <a href="https://arxiv.org/pdf/1905.00441.pdf">ArXiv</a> ] &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="https://github.com/Cold-Winter/Nattack">Code</a> ] &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="https://docs.google.com/presentation/d/1A1xlKOMSmatW_vtxJbVyDJbPl7D0_9MQiAVDPOZ3AGs/edit?usp=sharing">Slides</a> ] </font>
                       </div>
                     </div>
                   </div>
