--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 <div class="row">
                   <div class="col-md-9">
                     <h3 class="with-sideline">Biography</h3>
-                    <p>Boqing Gong is a research scientist at Google, Seattle and a principal investigator at ICSI, Berkeley. His research in machine learning and computer vision focuses on data/label-efficient learning (e.g., domain adaptation, few-shot, reinforcement, webly-supervised, and self-supervised learning) and the visual analytics of objects, scenes, human activities, and their attributes. Before joining Google in 2019, he worked in Tencent and was a tenure-track Assistant Professor at the University of Central Florida (UCF). He received an NSF CRII award in 2016 and an NSF BIGDATA award in 2017, both of which were the first of their kinds ever granted to UCF. He is/was a (senior) area chair of NeurIPS 2019, ICCV 2019, ICML 2019, AISTATS 2019, WACV 2018--2020, and AAAI 2020. He received his Ph.D. in 2015 at the University of Southern California, where the Viterbi Fellowship partially supported his work.</p>
+                    <p>Boqing Gong is a research scientist at Google, Seattle and a principal investigator at ICSI, Berkeley. His research in machine learning and computer vision focuses on sample-efficient learning (e.g., domain adaptation, few-shot, reinforcement, webly-supervised, and self-supervised learning) and the visual analytics of objects, scenes, human activities, and their attributes. Before joining Google in 2019, he worked in Tencent and was a tenure-track Assistant Professor at the University of Central Florida (UCF). He received an NSF CRII award in 2016 and an NSF BIGDATA award in 2017, both of which were the first of their kinds ever granted to UCF. He is/was a (senior) area chair of NeurIPS 2019, ICCV 2019, ICML 2019, AISTATS 2019, WACV 2018--2020, and AAAI 2020. He received his Ph.D. in 2015 at the University of Southern California, where the Viterbi Fellowship partially supported his work.</p>
                     <p><br></p>
 
                     
@@ -155,7 +155,7 @@
                     <h3 class="with-sideline">CV</h3><a href="CV_BGong.pdf" class="btn btn-medium btn-block btn-round btn-thick-border"><i class="oi-download-from-cloud"></i><span class="text-capitilize">Download CV</span></a>
                     <p><br></p>
                     <h3 class="with-sideline">Recent services</h3>
-                    <p>Area chair of CVPR'20, NeurIPS'19, ICCV'19, ICML'19, AISTATS'19, and WACV'18-20</p>
+                    <p>Area chair of CVPR'20, ECCV'20, ICML'19-20, NeurIPS'19, ICCV'19, AISTATS'19, and WACV'18-20</p>
                     <p></p>
                     <p>Senior area chair (meta-reviewer) of AAAI'20</p>
                     <p></p>
