--- a/publications.html
+++ b/publications.html
@@ -143,13 +143,24 @@ http://themeforest.net/user/owwwlab/
                       <h5 class="title"></h5>
                   </div>
 
+                  <div class="tl-item active pub-item with-thumb"><span class="item-section">2020</span>
+                    <div class="elem-wrapper"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;ICLR</div><br>
+                    <div class="content-wrapper">
+                      <h3 class="title">MACER: Attack-free and Scalable Robust Training via Maximizing Certified Radius</h3>
+                      <div class="description">
+                        <div class="citation"><span> International Conference on Learning Representations <b>(ICLR)</b>, 2020  <span class="block-elem">R Zhai, C Dan, D He, H Zhang, <b>B Gong</b>, P Ravikumar, C-J Hsieh, L Wang</span></span></div>
+                        <font color="blue">&#10236; [ <a href="https://openreview.net/forum?id=rJx1Na4Fwr">Openreview</a> ] &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="https://openreview.net/pdf?id=rJx1Na4Fwr">PDF</a> ]  </font>
+                      </div>
+                    </div>
+                  </div>
+
                   <div class="tl-item active pub-item with-thumb"><span class="item-section">2019</span>
                     <div class="elem-wrapper"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;ICCV</div><br>
                     <div class="content-wrapper">
                       <h3 class="title">A Fast and Accurate One-Stage Approach to Visual Grounding</h3>
                       <div class="description">
                         <div class="citation"><span> International Conference on Computer Vision <b>(ICCV)</b>, 2019  <b><font color="blue">(Oral)</font></b><span class="block-elem">Z Yang, <b>B Gong</b>, L Wang, W Huang, D Yu, and J Luo</span></span></div>
-                        <font color="blue">&#10236; [ <a href="https://arxiv.org/abs/1908.06354">ArXiv</a> ] &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="">Code coming soon</a> ] &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="">Slides coming soon</a> ] </font>
+                        <font color="blue">&#10236; [ <a href="https://arxiv.org/abs/1908.06354">ArXiv</a> ] &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="https://github.com/zyang-ur/onestage_grounding">Code</a> ] &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="">Slides coming soon</a> ] </font>
                       </div>
                     </div>
                   </div>
