add slides for ICCV19

--- a/publications.html
+++ b/publications.html
@@ -160,7 +160,7 @@ http://themeforest.net/user/owwwlab/
                       <h3 class="title">A Fast and Accurate One-Stage Approach to Visual Grounding</h3>
                       <div class="description">
                         <div class="citation"><span> International Conference on Computer Vision <b>(ICCV)</b>, 2019  <b><font color="blue">(Oral)</font></b><span class="block-elem">Z Yang, <b>B Gong</b>, L Wang, W Huang, D Yu, and J Luo</span></span></div>
-                        <font color="blue">&#10236; [ <a href="https://arxiv.org/abs/1908.06354">ArXiv</a> ] &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="https://github.com/zyang-ur/onestage_grounding">Code</a> ] &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="">Slides coming soon</a> ] </font>
+                        <font color="blue">&#10236; [ <a href="https://arxiv.org/abs/1908.06354">ArXiv</a> ] &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="https://github.com/zyang-ur/onestage_grounding">Code</a> ] &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="papers/slides-grounding.pdf">Slides</a> ] &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="papers/poster-grounding.pdf">Poster</a> ] </font>
                       </div>
                     </div>
                   </div>
