--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 <div class="row">
                   <div class="col-md-9">
                     <h3 class="with-sideline">Biography</h3>
-                    <p>Boqing Gong is a research scientist at Google, Seattle and a principal investigator at ICSI, Berkeley. His research in machine learning and computer vision focuses on sample-efficient learning (e.g., domain adaptation, few-shot, reinforcement, webly-supervised, and self-supervised learning) and the visual analytics of objects, scenes, human activities, and their attributes. Before joining Google in 2019, he worked in Tencent and was a tenure-track Assistant Professor at the University of Central Florida (UCF). He received an NSF CRII award in 2016 and an NSF BIGDATA award in 2017, both of which were the first of their kinds ever granted to UCF. He is/was a (senior) area chair of NeurIPS 2019, ICCV 2019, ICML 2019, AISTATS 2019, WACV 2018--2020, and AAAI 2020. He received his Ph.D. in 2015 at the University of Southern California, where the Viterbi Fellowship partially supported his work.</p>
+                    <p>Boqing Gong is a research scientist at Google, Seattle and a principal investigator at ICSI, Berkeley. His research in machine learning and computer vision focuses on sample-efficient learning (e.g., domain adaptation, few-shot, reinforcement, webly-supervised, and self-supervised learning) and the visual analytics of objects, scenes, human activities, and their attributes. Before joining Google in 2019, he worked in Tencent and was a tenure-track Assistant Professor at the University of Central Florida (UCF). He received an NSF CRII award in 2016 and an NSF BIGDATA award in 2017, both of which were the first of their kinds ever granted to UCF. He is/was a (senior) area chair of NeurIPS, ICML, CVPR, ICCV, ECCV, AAAI, AISTATS, and WACV. He received his Ph.D. in 2015 at the University of Southern California, where the Viterbi Fellowship partially supported his work.</p>
                     <p><br></p>
 
                     
@@ -190,6 +190,8 @@
                         <li></li>
                         <li></li>
                         <li></li>
+                        <li></li>
+                        <li>2020</li>
                         <li>2019</li>
                         <li>2018</li>
                         <li>2017</li>
@@ -210,6 +212,20 @@
                         <div class="tl-item"></div>
                         <div class="tl-item"></div>
                         <div class="tl-item"></div>
+                        <div class="tl-item"></div>
+
+                        <div class="tl-item">
+                          <h5 class="title">Papers on adversarial deep learning, long-tailed classification, and domain (2020)</h5>
+                          <div class="description"> 
+                            <a class="btn btn-small btn-round btn-icon-right btn-anim-i" href="publications.html"><i class="icon oi-forward"></i><span>read more</span></a>
+                          </div>
+                          <h5 class="title"><a href="research.html">Talks</a> on long-tailed visual recognition (2020) </h5>
+                          <div class="description"> 
+                            <a class="btn btn-small btn-round btn-icon-right btn-anim-i" href="research.html"><i class="icon oi-forward"></i><span>read more</span></a>
+                          </div>
+                          <h5 class="title">Serving as an area chair of CVPR 2020, ECCV 2020, ICML 2020, and WACV 2020 (02/2019)</h5>
+                          <h5 class="title">Serving in two NSF panels (2020)</h5>
+                        </div>
 
                         <div class="tl-item">
                           <h5 class="title">Papers published on adversarial attack, vision+language, domain adaptation, and reinforcement learning (2019)</h5>
@@ -410,12 +426,12 @@
                   <div class="col-md-3">
                     <div class="heading-with-sub">
                       <h3 class="title with-sideline">Research</h3>
-                      <p class="lead"> A research scientist in machine learning and computer vision, I am interested in developing novel algorithms to understand objects, human activities, scenes, and their attributes. </p>
+                      <p class="lead"> I am interested in developing novel algorithms to understand objects, human activities, scenes, and their attributes. I strive to understand the mathematical structures of research questions in order to develop effective and efficient algorithmic solutions, with strong analytical properties and compelling practical performance.</p>
                     </div><a href="research.html" class="btn btn-small btn-round m-top-5"><span>read more</span></a>
                   </div>
                   <div class="col-md-9">
                     <div data-cols="3" data-nav="true" data-margin="30" data-cols-md='2' class="owl-carousel items featured-items owwwlab-theme nav-top-right">
-                    	<a href="papers/cvpr12.pdf" class="featured-item boxed"><div class="features-image"><img src="assets/img/featured-items/01.jpg" alt="Domain Adaptation / Transfer Learning"></div><h3 class="features-title">Domain Adaptation/Transfer Learning</h3></a>
+                    	  <a href="papers/cvpr12.pdf" class="featured-item boxed"><div class="features-image"><img src="assets/img/featured-items/01.jpg" alt="Domain Adaptation / Transfer Learning"></div><h3 class="features-title">Domain Adaptation/Transfer Learning</h3></a>
                         
                         <a href="#" class="featured-item boxed"><div class="features-image"><img src="assets/img/featured-items/02.jpg" alt="image"></div><h3 class="features-title">Zero-/Few-shot Learning</h3></a>
 
