--- a/publications_backup.html
+++ b/publications_backup.html
@@ -102,64 +102,28 @@ http://themeforest.net/user/owwwlab/
           <section id="main-area">
             <section class="section section-narrow slim-container bg-gray">
               <div class="container">
-                <div data-cols="3" data-nav="true" data-margin="30" data-cols-md='2' class="owl-carousel items featured-items owwwlab-theme nav-top-right">
-
-                  <div class="featured-item boxed"><a href="" class="book-el set-bg"><img src="assets/img/long-tail.png" class="set-me">
-                      <div class="contents">
-                        <div class="item-meta"><span class="date">2020</span></div>
-                        <div class="title-wrapper">
-                          <h2 class="title">Long-tailed visual recognition</h2>
-                        </div>
-                      </div></a></div>
-
-                  <div class="featured-item boxed"><a href="https://arxiv.org/pdf/1905.00441.pdf" class="book-el set-bg"><img src="assets/img/nattack.png" class="set-me">
-                      <div class="contents">
-                        <div class="item-meta"><span class="date">2019</span></div>
-                        <div class="title-wrapper">
-                          <h2 class="title">Normal adversarial attack</h2>
-                        </div>
-                      </div></a></div>
-
-                  <div class="featured-item boxed"><a href="papers/ct-wgan.pdf" class="book-el set-bg"><img src="assets/img/gan.png" class="set-me">
-                      <div class="contents">
-                        <div class="item-meta"><span class="date">2018</span></div>
-                        <div class="title-wrapper">
-                          <h2 class="title">Generative adversarial net</h2>
-                        </div>
-                      </div></a></div>
-
-                  <div class="featured-item boxed"><a href="http://openaccess.thecvf.com/content_iccv_2017/html/Zhang_Curriculum_Domain_Adaptation_ICCV_2017_paper.html" class="book-el set-bg"><img src="assets/img/publications/grid/03.jpg" class="set-me">
-                      <div class="contents">
-                        <div class="item-meta"><span class="date">2017</span></div>
-                        <div class="title-wrapper">
-                          <h2 class="title">Simulation <b>&#x2192;</b> Real world</h2>
-                        </div>
-                      </div></a></div>
-
-                    <div class="featured-item boxed"><a href="papers/eccv16-webly.pdf" class="book-el set-bg"><img src="assets/img/featured-items/04.jpg" class="set-me">
-                      <div class="contents">
-                        <div class="item-meta"><span class="date">2016</span></div>
-                        <div class="title-wrapper">
-                          <h2 class="title">Webly-supervised learning</h2>
-                        </div>
-                      </div></a></div>
-
-                  <div class="featured-item boxed"><a href="https://papers.nips.cc/paper/5413-diverse-sequential-subset-selection-for-supervised-video-summarization" class="book-el set-bg"><img src="assets/img/publications/grid/02.jpg" class="set-me">
-                      <div class="contents">
-                        <div class="item-meta"><span class="date">2014</span></div>
-                        <div class="title-wrapper">
-                          <h2 class="title">SeqDPP: sequential determinantal point process</h2>
-                        </div>
-                      </div></a></div>
-
-                  <div class="featured-item boxed"><a href="papers/cvpr12.pdf" class="book-el set-bg"><img src="assets/img/publications/grid/01.jpg" class="set-me">
+                <div class="row pull-up-160">
+                  <div class="col-md-4"><a href="papers/cvpr12.pdf" class="book-el set-bg"><img src="assets/img/publications/grid/01.jpg" class="set-me">
                       <div class="contents">
                         <div class="item-meta"><span class="date">2012</span></div>
                         <div class="title-wrapper">
-                          <h2 class="title">GFK: geodesic flow kernel</h2>
+                          <h2 class="title">GFK: Geodesic Flow Kernel</h2>
                         </div>
                       </div></a></div>
-                    
+                  <div class="col-md-4"><a href="https://papers.nips.cc/paper/5413-diverse-sequential-subset-selection-for-supervised-video-summarization" class="book-el set-bg"><img src="assets/img/publications/grid/02.jpg" class="set-me">
+                      <div class="contents">
+                        <div class="item-meta"><span class="date">2014</span></div>
+                        <div class="title-wrapper">
+                          <h2 class="title">SeqDPP: Sequential Determinantal Point Process</h2>
+                        </div>
+                      </div></a></div>
+                  <div class="col-md-4"><a href="http://openaccess.thecvf.com/content_iccv_2017/html/Zhang_Curriculum_Domain_Adaptation_ICCV_2017_paper.html" class="book-el set-bg"><img src="assets/img/publications/grid/03.jpg" class="set-me">
+                      <div class="contents">
+                        <div class="item-meta"><span class="date">2017</span></div>
+                        <div class="title-wrapper">
+                          <h2 class="title">Simulations <b>&#x2192;</b> Real World</h2>
+                        </div>
+                      </div></a></div>
                 </div>
               </div>
             </section>
@@ -180,55 +144,11 @@ http://themeforest.net/user/owwwlab/
                   </div>
 
                   <div class="tl-item active pub-item with-thumb"><span class="item-section">2020</span>
-                    <div class="elem-wrapper"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;CVPR</div><br>
-                    <div class="content-wrapper">
-                      <h3 class="title">Rethinking Class-Balanced Methods for Long-Tailed Visual Recognition from a Domain Adaptation Perspective</h3>
-                      <div class="description">
-                        <div class="citation"><span>IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b>, 2020  <span class="block-elem">M Jamal*, M Brown, L Wang, M Yang, and <b>B Gong</b></span></span></div>
-                        <font color="blue">&#10236; [ <a href="">PDF coming soon</a> ]  </font>
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="tl-item pub-item with-thumb">
-                    <div class="elem-wrapper"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;CVPR</div><br>
-                    <div class="content-wrapper">
-                      <h3 class="title">Neural Networks Are More Data-Efficient Teachers Than Human Raters: Active Mixup for Knowledge Distillation from a Blackbox Teacher Model</h3>
-                      <div class="description">
-                        <div class="citation"><span>IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b>, 2020  <span class="block-elem">D Wang, *Y Li, L Wang, and <b>B Gong</b></span></span></div>
-                        <font color="blue">&#10236; [ <a href="">PDF coming soon</a> ]  </font>
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="tl-item pub-item with-thumb">
-                    <div class="elem-wrapper"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;CVPR</div><br>
-                    <div class="content-wrapper">
-                      <h3 class="title">Open Compound Domain Adaptation</h3>
-                      <div class="description">
-                        <div class="citation"><span>IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b>, 2020  <span class="block-elem">Z Liu=, Z Miao=, X Pan, X Zhan, D Lin, S Yu, and <b>B Gong</b></span></span></div>
-                        <font color="blue">&#10236; [ <a href="">PDF coming soon</a> ] &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="https://arxiv.org/abs/1909.03403">ArXiv</a> ] </font>
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="tl-item pub-item with-thumb">
-                    <div class="elem-wrapper"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;CVPR</div><br>
-                    <div class="content-wrapper">
-                      <h3 class="title">Adversarial Examples Improve Image Recognition</h3>
-                      <div class="description">
-                        <div class="citation"><span>IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b>, 2020  <span class="block-elem">C Xie, M Tan, <b>B Gong</b>, J Wang, A Yuille, and Q Le</span></span></div>
-                        <font color="blue">&#10236; [ <a href="">PDF coming soon</a> ]  &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="https://arxiv.org/abs/1911.09665">ArXiv</a> ]</font>
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="tl-item pub-item with-thumb">
                     <div class="elem-wrapper"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;ICLR</div><br>
                     <div class="content-wrapper">
                       <h3 class="title">MACER: Attack-free and Scalable Robust Training via Maximizing Certified Radius</h3>
                       <div class="description">
-                        <div class="citation"><span> International Conference on Learning Representations <b>(ICLR)</b>, 2020  <span class="block-elem">R Zhai, C Dan, D He, H Zhang, <b>B Gong</b>, P Ravikumar, C-J Hsieh, and L Wang</span></span></div>
+                        <div class="citation"><span> International Conference on Learning Representations <b>(ICLR)</b>, 2020  <span class="block-elem">R Zhai, C Dan, D He, H Zhang, <b>B Gong</b>, P Ravikumar, C-J Hsieh, L Wang</span></span></div>
                         <font color="blue">&#10236; [ <a href="https://openreview.net/forum?id=rJx1Na4Fwr">Openreview</a> ] &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="https://openreview.net/pdf?id=rJx1Na4Fwr">PDF</a> ]  </font>
                       </div>
                     </div>
@@ -329,7 +249,7 @@ http://themeforest.net/user/owwwlab/
                     <div class="content-wrapper">
                       <h3 class="title">Large-Scale Long-Tailed Recognition in an Open World</h3>
                       <div class="description">
-                        <div class="citation"><span> IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b>, 2019 <b><font color="blue">(Oral)</font></b> <span class="block-elem">Z Liu=, Z Miao=, X Zhan, J Wang, <b>B Gong</b>, and S Yu</span></span></div>
+                        <div class="citation"><span> IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b>, 2019 <b><font color="blue">(Oral)</font></b> <span class="block-elem">Z Liu, Z Miao, X Zhan, J Wang, <b>B Gong</b>, and S Yu</span></span></div>
                         <font color="blue">&#10236; [ <a href="https://arxiv.org/abs/1904.05160">ArXiv</a> ] &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="https://liuziwei7.github.io/projects/LongTail.html">Data and code</a> ]</font>
                       </div>
                     </div>
