--- a/research.html
+++ b/research.html
@@ -127,7 +127,18 @@ http://themeforest.net/user/owwwlab/
                         <div class="pub-item with-icon">
                           <div class="elem-wrapper"><i class="oli oli-bookmark"></i></div>
                           <div class="content-wrapper">
-                            <h3 class="title">Gaussian Attack by Learning the Distributions of Adversarial Examples &#10230; <a href="https://docs.google.com/presentation/d/1A1xlKOMSmatW_vtxJbVyDJbPl7D0_9MQiAVDPOZ3AGs/edit?usp=sharing"> <u>[Slides]</u> </a></h3>
+                            <h3 class="title"><font color="blue">Long-Tailed Visual Recognition is A Domain Adaptation Problem</font> &#10230; <a href="https://drive.google.com/file/d/1wOsHu88Tmh2gMbxKttgcSTmQO2PqGxrm/view?usp=sharing"> <u>[Slides]</u> </a> <a href="https://drive.google.com/file/d/1SIxqOXZEQMnhpTfIQB8ucP-Mm3k1t9aC/view?usp=sharing"> <u>[PDF]</u> </a> </h3>
+                            <div class="description"> 
+                              <p>
+                                Presented at CVPR 2020 Area Chair Workshop and WACV 2020 Workshop on <u><a href="https://wvasbsd.github.io/2020/index.html">Vision Applications and Solutions to Biased or Scarce Data </a></u> 
+                              </p>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="pub-item with-icon">
+                          <div class="elem-wrapper"><i class="oli oli-bookmark"></i></div>
+                          <div class="content-wrapper">
+                            <h3 class="title"><font color="blue">Gaussian Attack by Learning the Distributions of Adversarial Examples</font> &#10230; <a href="https://docs.google.com/presentation/d/1A1xlKOMSmatW_vtxJbVyDJbPl7D0_9MQiAVDPOZ3AGs/edit?usp=sharing"> <u>[Slides]</u> </a></h3>
                             <div class="description"> 
                               <p>
                                 Presented at UC Davis, Waymo, and CVPR 2019 Workshop on <u><a href="http://www.gigavision.cn/index.php?c=main&a=CVPR2019">GigaVision</a></u> 
@@ -138,7 +149,7 @@ http://themeforest.net/user/owwwlab/
                         <div class="pub-item with-icon">
                           <div class="elem-wrapper"><i class="oli oli-bookmark"></i></div>
                           <div class="content-wrapper">
-                            <h3 class="title">Sequential Determinantal Point Processes: Models, Algorithms, and Applications in Diverse and Sequential Subset Selection &#10230; <a href="assets/seqDPP-tutorial.pdf"> <u>[Slides]</u> </a></h3>
+                            <h3 class="title"><font color="blue">Sequential Determinantal Point Processes: Models, Algorithms, and Applications in Diverse and Sequential Subset Selection</font> &#10230; <a href="assets/seqDPP-tutorial.pdf"> <u>[Slides]</u> </a></h3>
                             <div class="description"> 
                               <p>
                                 IEEE CVPR 2019 Tutorial on <u><a href="https://rpand002.github.io/cvpr19_sumt.html">Recent Advances in Visual Data Summarization</a></u> 
@@ -149,7 +160,7 @@ http://themeforest.net/user/owwwlab/
                       	<div class="pub-item with-icon">
                           <div class="elem-wrapper"><i class="oli oli-bookmark"></i></div>
                           <div class="content-wrapper">
-                            <h3 class="title">Curriculum Domain Adaptation: Using Simulation for Real &#10230; <a href="assets/CDA.pdf"> <u>[PDF]</u> </a></h3>
+                            <h3 class="title"><font color="blue">Curriculum Domain Adaptation: Using Simulation for Real</font> &#10230; <a href="assets/CDA.pdf"> <u>[PDF]</u> </a></h3>
                             <div class="description"> 
                               <p>
                                 Presented at IEEE BIGDATA 2018 Workshop on <u><a href="http://www.cis.umassd.edu/~mshao/BDTL2018/index.html">Big Data Transfer Learning</a></u> 
@@ -160,7 +171,7 @@ http://themeforest.net/user/owwwlab/
                         <div class="pub-item with-icon">
                           <div class="elem-wrapper"><i class="oli oli-bookmark"></i></div>
                           <div class="content-wrapper">
-                            <h3 class="title">Multiple Shades of Dropout for Discriminative and Generative Deep Neural Networks &#10230; <a href="assets/dropout-informs.pdf"> <u>[PDF]</u> </a></h3>
+                            <h3 class="title"><font color="blue">Multiple Shades of Dropout for Discriminative and Generative Deep Neural Networks</font> &#10230; <a href="assets/dropout-informs.pdf"> <u>[PDF]</u> </a></h3>
                             <div class="description"> 
                               <p>
                                 Presented at INFORMS 2018 special session on Stochastic Optimization Methods and Approximation Theory in Machine Learning
@@ -171,7 +182,7 @@ http://themeforest.net/user/owwwlab/
                         <div class="pub-item with-icon">
                           <div class="elem-wrapper"><i class="oli oli-bookmark"></i></div>
                           <div class="content-wrapper">
-                            <h3 class="title">Learning and Adapting from the Web for Visual Recognitiona &#10230; <a href="assets/Web-DA.pdf"> <u>[PDF]</u> </a></h3>
+                            <h3 class="title"><font color="blue">Learning and Adapting from the Web for Visual Recognitiona</font> &#10230; <a href="assets/Web-DA.pdf"> <u>[PDF]</u> </a></h3>
                             <div class="description"> 
                               <p>
                                 Presented at CVPR 2018 Workshop on <u><a href="https://www.vision.ee.ethz.ch/webvision/workshop.html">Web Vision</a></u> and ECCV 2018 Workshop on <u><a href="https://www.cefrl.org/">CEFRL</a></u>
@@ -182,7 +193,7 @@ http://themeforest.net/user/owwwlab/
                         <div class="pub-item with-icon">
                           <div class="elem-wrapper"><i class="oli oli-bookmark"></i></div>
                           <div class="content-wrapper">
-                            <h3 class="title">Domain Adaptation and Transfer: All You Need to Use Simulation "for Real" &#10230; <a href="assets/simulation-da.pdf"><u>[PDF]</u> </a></h3>
+                            <h3 class="title"><font color="blue">Domain Adaptation and Transfer: All You Need to Use Simulation "for Real"</font> &#10230; <a href="assets/simulation-da.pdf"><u>[PDF]</u> </a></h3>
                             <div class="description"> 
                               <p>
                                 Presented at ECCV 2018 Workshop on <u><a href="https://eccv18-vlease.github.io/">Visual Learning and Embodied Agents in Simulation</a></u>
@@ -193,7 +204,7 @@ http://themeforest.net/user/owwwlab/
                         <div class="pub-item with-icon">
                           <div class="elem-wrapper"><i class="oli oli-bookmark"></i></div>
                           <div class="content-wrapper">
-                            <h3 class="title">Sequential Determinantal Point Processes (SeqDPPs) and Variations for Supervised Video Summarization &#10230; <a href="assets/dpp.pdf"><u>[PDF]</u> </a></h3>
+                            <h3 class="title"><font color="blue">Sequential Determinantal Point Processes (SeqDPPs) and Variations for Supervised Video Summarization</font> &#10230; <a href="assets/dpp.pdf"><u>[PDF]</u> </a></h3>
                             <div class="description"> 
                               <p>
                                 Presented at UC Berkeley, UC Irvine, Stanford University, Adobe Research, Facebook, etc. in 2017
@@ -204,7 +215,7 @@ http://themeforest.net/user/owwwlab/
                         <div class="pub-item with-icon">
                           <div class="elem-wrapper"><i class="oli oli-bookmark"></i></div>
                           <div class="content-wrapper">
-                            <h3 class="title">Domain Adaptation for Robust Visual Recognition &#10230; <a href="assets/domain-adaptation.pdf"> <u>[PDF]</u></a></h3>
+                            <h3 class="title"><font color="blue">Domain Adaptation for Robust Visual Recognition</font> &#10230; <a href="assets/domain-adaptation.pdf"> <u>[PDF]</u></a></h3>
                             <div class="description"> 
                               <p>
                                 Presented at ICSI/UC Berkeley, UC Santa Cruz, Google Research, NVIDIA Research, NEC Labs, etc. in 2017
