--- a/index.html
+++ b/index.html
@@ -432,18 +432,22 @@
                   <div class="col-md-9">
                     <div data-cols="3" data-nav="true" data-margin="30" data-cols-md='2' class="owl-carousel items featured-items owwwlab-theme nav-top-right">
                     	  <a href="papers/cvpr12.pdf" class="featured-item boxed"><div class="features-image"><img src="assets/img/featured-items/01.jpg" alt="Domain Adaptation / Transfer Learning"></div><h3 class="features-title">Domain Adaptation/Transfer Learning</h3></a>
+
+                        <a href="" class="featured-item boxed"><div class="features-image"><img src="assets/img/long-tail.png" alt="image"></div><h3 class="features-title">Long-tailed visual recognition</h3></a>
+
+                        <a href="https://arxiv.org/pdf/1905.00441.pdf" class="featured-item boxed"><div class="features-image"><img src="assets/img/nattack.png" alt="image"></div><h3 class="features-title">Adversarial attack on neural nets</h3></a>
                         
-                        <a href="#" class="featured-item boxed"><div class="features-image"><img src="assets/img/featured-items/02.jpg" alt="image"></div><h3 class="features-title">Zero-/Few-shot Learning</h3></a>
+                        <a href="https://arxiv.org/abs/1812.06423" class="featured-item boxed"><div class="features-image"><img src="assets/img/featured-items/02.jpg" alt="image"></div><h3 class="features-title">Zero-/Few-shot Learning</h3></a>
 
-                        <a href="#" class="featured-item boxed"><div class="features-image"><img src="assets/img/featured-items/03.jpg" alt="image"></div><h3 class="features-title">Sequential Determinantal Point Processes</h3></a>
+                        <a href="papers/seqdpp.pdf" class="featured-item boxed"><div class="features-image"><img src="assets/img/featured-items/03.jpg" alt="image"></div><h3 class="features-title">Sequential Determinantal Point Processes</h3></a>
 
-                        <a href="#" class="featured-item boxed"><div class="features-image"><img src="assets/img/featured-items/04.jpg" alt="image"></div><h3 class="features-title">Self/Webly Supervised Learning</h3></a>
+                        <a href="papers/eccv16-webly.pdf" class="featured-item boxed"><div class="features-image"><img src="assets/img/featured-items/04.jpg" alt="image"></div><h3 class="features-title">Self/Webly Supervised Learning</h3></a>
 
-                        <a href="#" class="featured-item boxed"><div class="features-image"><img src="assets/img/featured-items/05.jpg" alt="image"></div><h3 class="features-title">Semi-supervised Learning</h3></a>
+                        <a href="papers/ct-wgan.pdf" class="featured-item boxed"><div class="features-image"><img src="assets/img/featured-items/05.jpg" alt="image"></div><h3 class="features-title">Generative adversarial net</h3></a>
 
-                        <a href="#" class="featured-item boxed"><div class="features-image"><img src="assets/img/featured-items/06.jpg" alt="image"></div><h3 class="features-title">Language and Vision</h3></a>
+                        <a href="papers/iccv17-vqs.pdf" class="featured-item boxed"><div class="features-image"><img src="assets/img/featured-items/06.jpg" alt="image"></div><h3 class="features-title">Language and Vision</h3></a>
 
-                        <a href="#" class="featured-item boxed"><div class="features-image"><img src="assets/img/featured-items/07.jpg" alt="image"></div><h3 class="features-title">Reinforcement Learning</h3></a>
+                        <a href="papers/local-dpp.pdf" class="featured-item boxed"><div class="features-image"><img src="assets/img/featured-items/07.jpg" alt="image"></div><h3 class="features-title">Reinforcement Learning</h3></a>
                   </div>
                 </div>
               </div>
