--- a/publications.html
+++ b/publications.html
@@ -392,7 +392,7 @@ http://themeforest.net/user/owwwlab/
                       <h3 class="title">Classifier and Exemplar Synthesis for Zero-Shot Learning</h3>
                       <div class="description">
                         <div class="citation"><span> International Journal of Computer Vision <b>(IJCV)</b>, 2019  <span class="block-elem">S Changpinyo, WL Chao, <b>B Gong</b>, and F Sha</span></span></div>
-                        <font color="blue">&#10236; [ <a href="https://arxiv.org/pdf/1905.00441.pdf">ArXiv</a> ] &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="https://github.com/Cold-Winter/Nattack">Code</a> ] &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="https://docs.google.com/presentation/d/1A1xlKOMSmatW_vtxJbVyDJbPl7D0_9MQiAVDPOZ3AGs/edit?usp=sharing">Slides</a> ] </font>
+                        <font color="blue">&#10236; [ <a href="https://arxiv.org/abs/1812.06423">ArXiv</a> ] &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="https://github.com/Cold-Winter/Nattack">Code</a> ] &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="https://docs.google.com/presentation/d/1A1xlKOMSmatW_vtxJbVyDJbPl7D0_9MQiAVDPOZ3AGs/edit?usp=sharing">Slides</a> ] </font>
                       </div>
                     </div>
                   </div>
@@ -423,7 +423,7 @@ http://themeforest.net/user/owwwlab/
                     <div class="content-wrapper">
                       <h3 class="title"><a href="#">How Local is the Local Diversity? Reinforcing Sequential Determinantal Point Processes with Dynamic Ground Sets for Supervised Video Summarization</a></h3>
                       <div class="description">
-                        <div class="citation"><span> <a href="papers/cvpr18-deep-face.pdf">European Conference on Computer Vision <b>(ECCV)</b>, 2018 </a><span class="block-elem">Y Li*, L Wang, T Yang, and <b>B Gong</b></span></span></div>
+                        <div class="citation"><span> <a href="">European Conference on Computer Vision <b>(ECCV)</b>, 2018 </a><span class="block-elem">Y Li*, L Wang, T Yang, and <b>B Gong</b></span></span></div>
                         <font color="blue">&#10236; [ <a href="papers/local-dpp.pdf">PDF</a> ] </font>
                       </div>
                     </div>
