--- a/publications.html
+++ b/publications.html
@@ -184,7 +184,7 @@ http://themeforest.net/user/owwwlab/
                     <div class="content-wrapper">
                       <h3 class="title">Rethinking Class-Balanced Methods for Long-Tailed Visual Recognition from a Domain Adaptation Perspective</h3>
                       <div class="description">
-                        <div class="citation"><span>IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b>, 2020  <span class="block-elem">M Jamal*, M Brown, L Wang, M Yang, and <b>B Gong</b></span></span></div>
+                        <div class="citation"><span>IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b>, 2020 <b><font color="blue">(Oral) </font></b>  <span class="block-elem">M Jamal*, M Brown, L Wang, M Yang, and <b>B Gong</b></span></span></div>
                         <font color="blue">&#10236; [ <a href="">PDF coming soon</a> ]  </font>
                       </div>
                     </div>
@@ -195,7 +195,7 @@ http://themeforest.net/user/owwwlab/
                     <div class="content-wrapper">
                       <h3 class="title">Neural Networks Are More Data-Efficient Teachers Than Human Raters: Active Mixup for Knowledge Distillation from a Blackbox Teacher Model</h3>
                       <div class="description">
-                        <div class="citation"><span>IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b>, 2020  <span class="block-elem">D Wang, *Y Li, L Wang, and <b>B Gong</b></span></span></div>
+                        <div class="citation"><span>IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b>, 2020 <b><font color="blue">(Oral) </font></b> <span class="block-elem">D Wang, *Y Li, L Wang, and <b>B Gong</b></span></span></div>
                         <font color="blue">&#10236; [ <a href="">PDF coming soon</a> ]  </font>
                       </div>
                     </div>
@@ -206,7 +206,7 @@ http://themeforest.net/user/owwwlab/
                     <div class="content-wrapper">
                       <h3 class="title">Open Compound Domain Adaptation</h3>
                       <div class="description">
-                        <div class="citation"><span>IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b>, 2020  <span class="block-elem">Z Liu=, Z Miao=, X Pan, X Zhan, D Lin, S Yu, and <b>B Gong</b></span></span></div>
+                        <div class="citation"><span>IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b>, 2020 <b><font color="blue">(Oral) </font></b> <span class="block-elem">Z Liu=, Z Miao=, X Pan, X Zhan, D Lin, S Yu, and <b>B Gong</b></span></span></div>
                         <font color="blue">&#10236; [ <a href="">PDF coming soon</a> ] &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="https://arxiv.org/abs/1909.03403">ArXiv</a> ] </font>
                       </div>
                     </div>
